--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=twiterdemo
 server.port=3000
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Seriktulu90.
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
